# ORForise

./: .gitignore  Aggregate_Compare.py  Comparator.py  GFFFF  GFF_Adder.py  GFF_Intersector.py  LICENSE  ORF_Compare.py  ORForise.py  README.md  StORF_Compare.py  StORF_Compare_Backup.py  __init__.py  aggregate_Compare.py  pyproject.toml  requirements.txt  setup.cfg
Aux/: Genome_Metrics.py  gene_Lenghts.py  gene_lenghts.py  genome_Metrics.py  missed_gene_metrics.py  parital_Hit_Analysis.py  parital_Match_Analysis.py  plotted_Lengths.py  result_File_Analysis.py  start_Codon_Substitution.py  start_codon_substitution.py
GFF_Tool_Output/: Bacillus_Prodigal_Added.gff  Bacillus_Prodigal_Intersection_75.gff  Caul_Prodigal_Added.gff  Caul_Prodigal_Intersection.gff  Caul_Prodigal_Intersection_75.gff  E-coli_Prodigal_Added.gff  E-coli_Prodigal_Intersection_75.gff  Myco_Prodigal_Added.gff  Myco_Prodigal_Intersection_75.gff  Pseudo_Prodigal_Intersection.gff  Pseudo_Prodigal_Intersection_75.gff  Staph_Prodigal_Intersection_75.gff
GFF_Tools/: Bacillus_Prodigal_Intersection.gff  E-coli_Prodigal_Intersection.gff  GFF_Adder.py  GFF_Intersector.py  Myco_Prodigal_Intersection.gff  Pseudo_Prodigal_Added.gff  Staph_Prodigal_Added.gff  Staph_Prodigal_Intersection.gff  tmp
Genomes/: Bacillus.fa  Bacillus_metrics.csv  Caul_metrics.csv  E-coli.gff  E-coli_metrics.csv  Myco.fa  Myco.gff  Myco_metrics.csv  Pseudo_metrics.csv  README.md  Staph.fa  Staph.fa.fai  Staph_metrics.csv
Post_Analysis_Scripts/: genome_Metrics.py  missed_Gene_Metrics.py  missed_gene_metrics.py  parital_Match_Analysis.py  result_File_Analysis.py  start_Codon_Substitution.py
Supplementary_Data/: Supplementary_Rankings.xlsx  Supplementary_Results_1.xlsx  Supplementary_Results_2.xlsx
Testing/: Myco_Ensembl_GFF_Adder_Prodigal.gff  Prodigal_Myco.csv  (+3 more)
(+522 files in other folders)
