[metadata]
name = ORForise
version = 1.2.0
author = Nicholas Dimonaco
author_email = nicholas@dimonaco.co.uk
description = ORForise - Platform for analysing Prokaryote CoDing Sequence (CDS) Gene Predictors.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NickJD/ORForise
project_urls =
    Bug Tracker = https://github.com/NickJD/ORForise/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
