[metadata]
name = ORForise
version = 1.2.2
author = Nicholas Dimonaco
author_email = nicholas@dimonaco.co.uk
description = ORForise - Platform for analysing and comparing Prokaryote CoDing Sequence (CDS) Gene Predictions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NickJD/ORForise
project_urls =
    Bug Tracker = https://github.com/NickJD/ORForise/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    numpy

[options.packages.find]
where = src
include = *

[options.entry_points]
console_scripts =
    Annotation-Compare = ORForise.Annotation_Compare:main
    Aggregate-Compare = ORForise.Aggregate_Compare:main
    StORForise = ORForise.StORForise:main
    GFF-Adder = ORForise.GFF_Adder:main
    GFF-Intersector = ORForise.GFF_Intersector:main